<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Carventory</string>

    <!-- Navigation -->
    <string name="car_list">Car List</string>
    <string name="car_detail">Car Detail</string>
    <string name="add_edit_car">Add/Edit Car</string>

    <!-- Car List -->
    <string name="search">Search</string>
    <string name="cars_count">%1$d cars</string>
    <string name="add_car">Add car</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="show_as_list">Show as list</string>

    <!-- Car Details -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this car?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="car_image">Car image</string>
    <string name="edit_car">Edit Car</string>
    <string name="error_creating_image_file">Error creating image file</string>
    <string name="error_compressing_image">Error compressing image</string>
    <string name="camera_permission_denied">Camera permission denied</string>

    <!-- Car Form -->
    <string name="car_name">Car Name</string>
    <string name="name_required">Name is required</string>
    <string name="take_picture">Take Picture</string>
    <string name="car_updated">Car updated</string>
    <string name="new_car_added">New car added</string>
    <string name="save">Save</string>
    <string name="please_take_picture">Please take a picture</string>
    <string name="error_loading_image">Error loading image: %1$s</string>
    <string name="add_new_car">Add New Car</string>
    <string name="car_image_preview">Car image preview</string>
    <string name="take_image">Take Image</string>
    <string name="car_image_transition_name" translatable="false">car_image</string>

    <!-- Image Viewer -->
    <string name="close">Close</string>
</resources>