<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:ellipsize="end" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/carImagePreview"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSurface"
            android:contentDescription="@string/car_image_preview"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/take_image"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/carImagePreview"
            app:layout_constraintEnd_toEndOf="@id/carImagePreview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>